# learner-agent-core

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml
data/: .gitkeep
scripts/: check-port.sh
src/: __init__.py  database.py  knowledge_builder.py  knowledge_graph.py  learner_agent.py  prompts.py
src/web/: __init__.py  api.py  websocket_handler.py
src/web/static/: app.js  i18n.js  index.html  style.css
src/web/static/i18n/: en.json  es.json
