[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learner-agent-core"
version = "0.1.0"
description = "MVP: A learning AI agent that builds knowledge from user teaching"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Learner Agent Team"}
]
keywords = ["ai", "education", "learning", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",

    # Data Validation
    "pydantic>=2.10.0",

    # LLM Client
    "anthropic>=0.39.0",

    # Database (SQLite is built-in, but we need this for type hints)
    "aiosqlite>=0.20.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.urls]
Homepage = "https://github.com/yourusername/learner-agent-core"
Repository = "https://github.com/yourusername/learner-agent-core"
Issues = "https://github.com/yourusername/learner-agent-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
